Change the license in package.json to MIT

--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
     "url": "git@github.com-daisuke:dfujiwara/sherlock_photos_cloud_function.git"
   },
   "author": "Daisuke Fujiwara",
-  "license": "ISC"
+  "license": "MIT"
 }
