--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "git@github.com-daisuke:dfujiwara/sherlock_photos_cloud_function.git"
   },
   "author": "Daisuke Fujiwara",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dropbox": "^4.0.3"
+  }
 }
