--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Daisuke Fujiwara",
   "license": "MIT",
   "dependencies": {
-    "dropbox": "^4.0.3"
+    "dropbox": "^4.0.3",
+    "node-fetch": "^2.1.2"
   }
 }
