--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "dropbox": "^4.0.3",
-    "node-fetch": "^2.1.2"
+    "isomorphic-fetch": "^2.2.1"
   }
 }
