--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Daisuke Fujiwara",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^1.7.0",
     "dropbox": "^4.0.3",
     "isomorphic-fetch": "^2.2.1",
     "jpeg-autorotate": "^3.1.0"
