--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Daisuke Fujiwara",
   "license": "MIT",
   "dependencies": {
-    "@google-cloud/storage": "^1.7.0"
+    "@google-cloud/storage": "^1.7.0",
+    "simple-node-logger": "^18.12.21"
   }
 }
